samples/_failures_safe/1761268840_6bbf31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16f0b35c.c: In function ‘main’:
./samples/SAFE/__tmp_16f0b35c.c:159:12: error: missing terminating " character
  159 |     printf("INFO level entries: %d
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_16f0b35c.c:159:5: error: expected expression at end of input
  159 |     printf("INFO level entries: %d
      |     ^~~~~~
./samples/SAFE/__tmp_16f0b35c.c:159:5: error: expected declaration or statement at end of input
